UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Target_Exclusion_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Billing_Date__c</fullName>
        <label>Direct Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Customer_Name__c</fullName>
        <label>Direct Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect__c</fullName>
        <label>Direct/Indirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Product_Family__c</fullName>
        <label>Direct Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Product__c</fullName>
        <label>Direct Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Region__c</fullName>
        <label>Direct Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Rep_Name__c</fullName>
        <label>Direct Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Sales__c</fullName>
        <label>Direct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Sold_To_Rebate_Percent__c</fullName>
        <label>Direct Sold To Rebate Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Units__c</fullName>
        <label>Direct Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Billing_Date__c</fullName>
        <label>Indirect Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indirect_Customer_Name__c</fullName>
        <label>Indirect Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Product_Family__c</fullName>
        <label>Indirect Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Product__c</fullName>
        <label>Indirect Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Region__c</fullName>
        <label>Indirect Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales_Rep_Name__c</fullName>
        <label>Indirect Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales__c</fullName>
        <label>Indirect Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Unique_Identifier__c</fullName>
        <label>Indirect Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Units__c</fullName>
        <label>Indirect Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Target Exclusion Summary</label>
    <nameField>
        <label>Target Exclusions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Exclusion Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>